--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 <p>AC 05</p>
 <p>RA 1801599</p>
+<p>RA 1801419</p>
 <p>Nome: Pedro Henrique</p>
+<p>Nome: Vinicius Mariani</p>
 </body>
 </html>
